Overflow fix for about

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -185,6 +185,7 @@ body {
   text-align: center;
   padding: 100px 0;
   position: relative;
+  overflow: hidden;
 
   img {
     position: absolute;
